fix: dark mode @text-color-inverse maps to black

--- a/components/style/themes/dark.less
+++ b/components/style/themes/dark.less
@@ -166,7 +166,7 @@
 
 @text-color: fade(@white, 85%);
 @text-color-secondary: fade(@white, 45%);
-@text-color-inverse: @white;
+@text-color-inverse: @black;
 @icon-color-hover: fade(@white, 75%);
 @heading-color: fade(@white, 85%);
 
